deployments/staging/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: martian-imperial-year-table
spec:
  rules:
    - host: martian-imperial-year-table.staging.c4se.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: martian-imperial-year-table
                port:
                  number: 80
  tls:
    - hosts: [martian-imperial-year-table.staging.c4se.jp]
      secretName: letsencrypt-tls
